PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 20??, PHP 5.3.3
- Upgraded bundled sqlite to version 3.6.23.1. (Ilia)
- Upgraded bundled PCRE to version 8.02. (Ilia)

- Added stream_set_read_buffer, allows to set the buffer for read operation.
  (Pierre).
- Added stream filter support to mcrypt extension (ported from 
  mcrypt_filter). (Stas)
- Added full_special_chars filter to ext/filter (Rasmus)
- Added backlog socket context option for stream_socket_server(). (Mike)
- Added fifth parameter to openssl_encrypt()/openssl_decrypt()
  (string $iv) to use non-NULL IV.
  Made implicit use of NULL IV a warning. (Sara)
- Added openssl_cipher_iv_length(). (Sara)

- Changed namespaced classes so that the ctor can only be named
  __construct now. (Stas)
- Reset error state in PDO::beginTransaction() reset error state. (Ilia)

- Implemented FR#35638 (Adding udate to imap_fetch_overview results).
  (Charles_Duffy at dell dot com )
- Fixed possible buffer overflows in mysqlnd_list_fields,  mysqlnd_change_user.
  (Andrey)
- Fixed possible buffer overflows when handling error packets in mysqlnd.
  Reported by Stefan Esser. (Andrey)
- Fixed very rare memory leak in mysqlnd, when binding thousands of columns.
  (Andrey)

- Fixed a possible crash because of recursive GC invocation. (Dmitry)
- Fixed a possible resource destruction issues in shm_put_var()
  Reported by Stefan Esser (Dmitry)
- Fixed a possible information leak because of interruption of XOR operator.
  Reported by Stefan Esser (Dmitry)
- Fixed a possible memory corruption because of unexpected call-time pass by
  refernce and following memory clobbering through callbacks.
  Reported by Stefan Esser (Dmitry)
- Fixed a possible memory corruption in ArrayObject::uasort() Reported by
  Stefan Esser (Dmitry)
- Fixed a possible memory corruption in parse_str(). Reported by Stefan Esser
  (Dmitry)